test name index.html github pages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					Agence Web design
 				</h1>
 				<div class="text-center">
-					<a href="contact-la-panthere.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+					<a href="contact-la-panthere.html" data-toggle="tab" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
 			</div>
 		</div>
