--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="home-page-la-panthere.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -44,7 +44,7 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="home-page-la-panthere.html">Accueil</a>
+						<a href="index.html">Accueil</a>
 					</li>
 					<li>
 						<a href="contact-la-panthere.html">Contact</a>
@@ -223,22 +223,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="home-page-la-panthere.html" title="Decouvrir notre page twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="index.html" title="Decouvrir notre page twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="home-page-la-panthere.html" title="Decouvrir notre page facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="index.html" title="Decouvrir notre page facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="home-page-la-panthere.html" title="Decouvrir notre page dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="index.html" title="Decouvrir notre page dribble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="home-page-la-panthere.html" title="Decouvrir notre page instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="index.html" title="Decouvrir notre page instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
