--- a/contact-la-panthere.html
+++ b/contact-la-panthere.html
@@ -80,7 +80,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6">
-				<form id="form_1" novalidate role="form" success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate aria-label="Formulaire Contact" role="form" data-success="Your message has been sent." data-fail="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group" id="form">
 						<label for="name">
 							Nom
@@ -97,7 +97,7 @@
 						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" required id="input_504" />
 					</div>
 					<div class="form-group">
 						<label for="message">
@@ -125,7 +125,7 @@
 
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -157,7 +157,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
