--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 <a href="#main-content" class="visually-hidden focusable skip-link">
 	Aller au contenu principal
 </a>
+<!-- Navigation par tabulation END-->
+
 <div class="page-container">
 	<!-- Principal conteneur -->
-
     <!-- bloc-0 -->
     <div class="bloc bgc-white l-bloc " id="bloc-0">
         <div class="container bloc-sm">
@@ -256,8 +257,13 @@
     </div>
     <!-- bloc-5-cta END -->
 
+    <!-- ScrollToTop Button -->
+    <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+    <!-- ScrollToTop Button END-->
+
+
     <!-- Footer - bloc-8 -->
-    <div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+    <footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
         <div class="container bloc-sm">
             <div class="row">
                 <div class="col-sm-12">
@@ -304,7 +310,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
     <!-- Footer - bloc-8 END -->
 
 </div>
