--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="./js/jquery.touchSwipe.js" defer></script>
     <script src="./js/gmaps.js" defer></script>
 
-    <title>La Pantère | Agence Web design | Lyon</title>
+    <title>Agence Web design Lyon | La Panthère</title>
 
 
     <!-- Analytics -->
@@ -31,25 +31,29 @@
 <!-- Navigation par tabulation -->
 
 <a href="#main-content" class="visually-hidden focusable skip-link">
-	Aller au contenu principal
+    Aller au contenu principal
 </a>
 <!-- Navigation par tabulation END-->
 
-<div class="page-container">
-	<!-- Principal conteneur -->
+<main class="page-container">
+    <!-- Principal conteneur -->
     <!-- bloc-0 -->
-    <div class="bloc bgc-white l-bloc " id="bloc-0">
+    <header class="bloc bgc-white l-bloc " id="bloc-0">
         <div class="container bloc-sm">
 
-            <nav class="navbar row" >
+            <nav class="navbar row">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-                                                                   alt="paris web design logo agence web meilleure agence"
-                                                                   height="40"/></a>
+                    <a class="navbar-brand" href="index.html">
+                        <img src="img/agence-la-panthere-monochrome.svg"
+                             alt="lyon web design logo agence"
+                             height="40"/>
+                    </a>
                     <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
                             data-target=".navbar-1" role="button">
-                        <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
-                            class="icon-bar"></span><span class="icon-bar"></span>
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
                 </div>
                 <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -64,34 +68,37 @@
                 </div>
             </nav>
         </div>
-    </div>
+    </header>
     <!-- bloc-0 END -->
 
     <!-- bloc-1-presentation -->
-    <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
+    <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
          id="bloc-1-hero">
         <div class="container bloc-lg">
             <div class="row tight-width-whitespace">
-                <div class="col-sm-12">
-                    <img src="img/logo.png" class="center-block image-resize-mode"
+                <div class="col-sm-12 flex">
+                    <img src="img/logo.png"
+                         class="center-block image-resize-mode"
                          width="100"
-						 alt="Agence La Panthère, agence web lyon, création logo lyon"/>
-                    <h1 class="text-center hero-bloc-text tc-white ">
-                        La Panthère<br>
+                         alt="Agence La Panthère, agence web lyon, création logo lyon"/>
+                    <h1 class="text-center hero-bloc-text tc-white width-3">
                         Agence Web design
+                        La Panthère
                     </h1>
                     <div class="text-center">
                         <a href="contact-la-panthere.html" data-toggle="tab"
-                           class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+                           class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">
+                            Contact
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- bloc-1-presentation END -->
 
     <!-- bloc-2-services -->
-    <div class="bloc bgc-white l-bloc" id="bloc-2-services">
+    <section class="bloc bgc-white l-bloc" id="bloc-2-services">
         <div class="container bloc-md" id="main-content">
             <div class="row">
                 <div class="col-sm-12 text-center">
@@ -139,17 +146,17 @@
             </div>
             <div class="row voffset-lg voffset">
                 <div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-                    <img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png"
+                    <img alt="agence web design lyon" src="img/citation.png"
                          loading="lazy"/>
 
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- bloc-2-services END -->
 
     <!-- bloc-3-what-i-do -->
-    <div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
+    <section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
          id="bloc-3-what-i-do">
         <div class="container bloc-lg">
             <div class="row tight-width-whitespace black-background">
@@ -163,18 +170,22 @@
                         besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin
                         d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter.
                         Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement
-                        trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link"
-                                                                           href="contact-la-panthere.html">Contactez
-                        notre équipe</a><br>
+                        trouvable sur les moteurs de recherche.
+                        <br>
+                        <br>
+                        <a class="ltc-white bold-link" href="contact-la-panthere.html">
+                            Contactez notre équipe
+                        </a>
+                        <br>
                     </p>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- bloc-3-what-i-do END -->
 
     <!-- bloc-4-portfolio -->
-    <div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+    <section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
         <div class="container bloc-lg">
             <div class="row">
                 <div class="col-sm-12 text-center">
@@ -185,10 +196,12 @@
             <div class="row tight-width-whitespace portfolio-row">
                 <div class="col-sm-6">
                     <a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
-                       data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
+                       data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+                        <img
                             src="img/1.jpg"
-                            alt="paris web design logo agence web meilleure agence et refonte site web journal"
-                            class="img-responsive portfolio-thumb"/></a>
+                            alt="lyon web design logo agence"
+                            class="img-responsive portfolio-thumb"/>
+                    </a>
                     <h3 class="mg-md text-center">
                         Refonte d'un site web pour un journal local
                     </h3>
@@ -198,9 +211,11 @@
                 </div>
                 <div class="col-sm-6">
                     <a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
-                       data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
+                       data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+                        <img
                             src="img/2.jpg" class="img-responsive portfolio-thumb"
-                            alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"/></a>
+                            alt="Création d'un site web pour photographes"/>
+                    </a>
                     <h3 class="mg-md text-center">
                         Création d'un site web pour photographes
                     </h3>
@@ -212,9 +227,11 @@
             <div class="row tight-width-whitespace portfolio-row">
                 <div class="col-sm-6">
                     <a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
-                       data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
+                       data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+                        <img
                             src="img/3.jpg" class="img-responsive portfolio-thumb"
-                            alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+                            alt="Création d'un site web pour voyageur"/>
+                    </a>
                     <h3 class="mg-md text-center">
                         Création d'un site internet pour un voyageur
                     </h3>
@@ -225,9 +242,11 @@
                 </div>
                 <div class="col-sm-6">
                     <a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
-                       data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
+                       data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+                        <img
                             src="img/4.jpg" class="img-responsive portfolio-thumb"
-                            alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"/></a>
+                            alt="Création d'un site web pour agence de mariage"/>
+                    </a>
                     <h3 class="mg-md text-center">
                         Conception d'un site pour une agence de mariage
                     </h3>
@@ -238,15 +257,16 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- bloc-4-portfolio END -->
 
     <!-- bloc-5-cta -->
-    <div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+    <section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
         <div class="container bloc-lg">
             <div class="row">
                 <h3 class="mg-md text-center tc-white">
-                    Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
+                    Prêt pour redonner vie à votre projet ?
+                    <br>Contactez notre équipe !
                 </h3>
                 <div class="col-sm-12 text-center">
                     <a href="contact-la-panthere.html"
@@ -254,11 +274,17 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <!-- bloc-5-cta END -->
 
-    <!-- ScrollToTop Button -->
-    <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+</main>
+<!-- Principal conteneur END -->
+
+
+
+<!-- ScrollToTop Button -->
+    <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')">
+        <span class="fa fa-chevron-up"></span></a>
     <!-- ScrollToTop Button END-->
 
 
@@ -273,26 +299,30 @@
                     <div class="row row-no-gutters social">
                         <div class="col-sm-3">
                             <div class="text-center">
-                                <a class="social" href="index.html" title="Decouvrir notre page twitter"><span
-                                        class="fa fa-twitter icon-md"></span></a>
+                                <a class="social" href="index.html" title="Page twitter agence Web design La Panthère">
+                                    <span class="fa fa-twitter icon-md"></span>
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-3">
                             <div class="text-center">
-                                <a class="social" href="index.html" title="Decouvrir notre page facebook"><span
-                                        class="fa fa-facebook icon-md"></span></a>
+                                <a class="social" href="index.html" title="Page facebook agence Web design La Panthère">
+                                    <span class="fa fa-facebook icon-md"></span>
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-3">
                             <div class="text-center">
-                                <a class="social" href="index.html" title="Decouvrir notre page dribble"><span
-                                        class="fa fa-dribbble icon-md"></span></a>
+                                <a class="social" href="index.html" title="Page dribble agence Web design La Panthère">
+                                    <span class="fa fa-dribbble icon-md"></span>
+                                </a>
                             </div>
                         </div>
                         <div class="col-sm-3">
                             <div class="text-center">
-                                <a class="social" href="index.html" title="Decouvrir notre page instagram"><span
-                                        class="fa fa-instagram icon-md"></span></a>
+                                <a class="social" href="index.html" title="Page instagram agence Web design La Panthère">
+                                    <span class="fa fa-instagram icon-md"></span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -300,10 +330,18 @@
                         <div class="col-sm-4">
                             Partenaires
                             <ul>
-                                <li><a href="voiture.com">Les meilleurs voiture d'occasion 2022</a></li>
-                                <li><a href="pizza.com">Trouve une pizzeria près de chez toi</a></li>
-                                <li><a href="matoiture.com">Le meilleurs couvreur près de chez toi</a></li>
-                                <li><a href="immobilierseo.com">La meilleur agence près de chez toi</a></li>
+                                <li>
+                                    <a href="voiture.com">Les meilleurs voiture d'occasion 2022</a>
+                                </li>
+                                <li>
+                                    <a href="pizza.com">Trouve une pizzeria près de chez toi</a>
+                                </li>
+                                <li>
+                                    <a href="matoiture.com">Le meilleurs couvreur près de chez toi</a>
+                                </li>
+                                <li>
+                                    <a href="immobilierseo.com">La meilleur agence près de chez toi</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -312,10 +350,6 @@
         </div>
     </footer>
     <!-- Footer - bloc-8 END -->
-
-</div>
-<!-- Principal conteneur END -->
-
 
 </body>
 </html>
