--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <title>Agence Web design Lyon | La Panthère</title>
 
-
     <!-- Analytics -->
 
     <!-- Analytics END -->
@@ -41,10 +40,11 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="img/agence-la-panthere-monochrome.svg"
                              alt="agence web design logo lyon"
-                             height="40"/>
+                             height="40"
+                             loading="lazy">
                     </a>
                     <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
-                            data-target=".navbar-1" role="button">
+                            data-target=".navbar-1">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -79,7 +79,8 @@
                     <img src="img/logo.png"
                          class="center-block image-resize-mode"
                          width="100"
-                         alt="Agence La Panthère, agence web lyon"/>
+                         alt="Agence La Panthère, agence web lyon"
+                         loading="lazy">
                     <h1 class="text-center hero-bloc-text tc-white width-3">
                         Agence Web design
                         La Panthère
@@ -199,7 +200,8 @@
                         <img
                             src="img/1.jpg"
                             alt="lyon web design logo agence"
-                            class="img-responsive portfolio-thumb"/>
+                            class="img-responsive portfolio-thumb"
+                            loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Refonte d'un site web pour un journal local
@@ -213,7 +215,8 @@
                        data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
                         <img
                             src="img/2.jpg" class="img-responsive portfolio-thumb"
-                            alt="Création d'un site web pour photographes"/>
+                            alt="Création d'un site web pour photographes"
+                            loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Création d'un site web pour photographes
@@ -229,7 +232,8 @@
                        data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
                         <img
                             src="img/3.jpg" class="img-responsive portfolio-thumb"
-                            alt="Création d'un site web pour voyageur"/>
+                            alt="Création d'un site web pour voyageur"
+                            loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Création d'un site internet pour un voyageur
@@ -244,7 +248,8 @@
                        data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
                         <img
                             src="img/4.jpg" class="img-responsive portfolio-thumb"
-                            alt="Création d'un site web pour agence de mariage"/>
+                            alt="Création d'un site web pour agence de mariage"
+                            loading="lazy">
                     </a>
                     <h3 class="mg-md text-center">
                         Conception d'un site pour une agence de mariage
